[metadata]
name=configure_sokka
version=0.2.0
description=Configuration script for the Sokka homelab
long_description= file: REAMDE.md
long_description_content_type = text/markdown
url = https://github.com/linode-sokka/deploy-tools
author = Alex Rudy
license = BSD 3-Clause License
python_requires="=>3.7, <4"

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Click
    requests

[options.entry_points]
console_scripts =
    configure-sokka = configure_sokka:main

[flake8]
max-line-length = 120
ignore = E203,W503
